src/objects/MUSW__Project_Parcel__c.object
<CustomObject>
    <description>Parcels associated to a Master Project</description>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Building_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Projects as Property</relationshipLabel>
        <relationshipName>Parcel_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Project2_Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Master_Project__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Site_Address_Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Parcel</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>